@@ -7,14 +7,13 @@ import com.hogar360.houses.houses.application.dto.response.PagedLocationResponse
 import com.hogar360.houses.houses.application.dto.response.SaveLocationResponse;
 import com.hogar360.houses.houses.application.services.LocationService;
 import com.hogar360.houses.houses.domain.model.LocationModel;
-import com.hogar360.houses.houses.domain.model.PageModel;
+import com.hogar360.houses.houses.domain.utils.PageResult;
 import com.hogar360.houses.houses.domain.ports.in.LocationServicePort;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -29,7 +28,7 @@ public class LocationServiceImpl implements LocationService {
 
     @Override
     public PagedLocationResponse searchLocations(String searchTerm, int page, int size, String sortBy, String sortDirection) {
-        PageModel<LocationModel> locationPage = locationServicePort.searchLocations(searchTerm, page, size, sortBy, sortDirection);
+        PageResult<LocationModel> locationPage = locationServicePort.searchLocations(searchTerm, page, size, sortBy, sortDirection);
         List<LocationResponse> locationResponses = locationPage.getContent().stream()
                 .map(locationModel -> new LocationResponse(
                         locationModel.getId(),
@@ -37,7 +36,7 @@ public class LocationServiceImpl implements LocationService {
                         locationModel.getCity().getDepartment().getName(),
                         locationModel.getSector()
                 ))
-                .collect(Collectors.toList());
+                .toList();
 
         return new PagedLocationResponse(
                 locationResponses,
